# lockstep

./: .gitignore  README.md  integrate_checkpoints.py  pyproject.toml  test_basic.py  test_duo_lockstep.py  test_duo_lockstep_simple.py  test_duo_speedup.py  test_improved.py  test_pretrained_checkpoints.py  test_true_lockstep.py  test_with_gif.py  train_duo_distillation.py
conf/: config.yaml
conf/decode/: lockstep.yaml
conf/hardware/: h200_8x.yaml
conf/model/: dream.yaml
conf/rl/: grpo.yaml
conf/wandb/: default.yaml
docs/: available_checkpoints.md  d2f_duo_analysis.md  duo_model_issues.md
outputs/duo_lockstep/: duo_lockstep_1.txt  duo_lockstep_2.txt  duo_lockstep_3.txt  duo_lockstep_sim_1.txt  duo_lockstep_sim_2.txt  duo_lockstep_sim_3.txt
scripts/: profile_infer.sh  smoke_decode.sh
src/: main.py
src/core/: __init__.py  dream_loader.py  duo_distillation.py  gif_viz.py  lockstep_controller.py  wandb_utils.py
src/distributed/: utils.py
